# iron-trainer

./: .beans.yml  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  railway.toml
backend/: alembic.ini  pyproject.toml
backend/alembic/: FROZEN.md  env.py
backend/alembic/versions/: 347bda160c86_race_catalog_athlete_race_fields.py  93fb7516cb22_initial_schema.py  9b56baa5ad9e_multi_user_athlete_id_partitioning.py  a1b3c5d7e9f1_daily_recovery_table.py  a1c2d3e4f5a6_device_token_table.py  b2d4e6f8a0c1_fitness_test_result.py  (+4 more)
backend/app/: __init__.py  analysis.py  auth.py  cli.py  config.py  dashboards.py  db.py  dedup.py  fitness_tests.py  health_ingest.py  insights.py  jobs.py  logging_config.py  main.py  metrics.py  models.py  nutrition.py  readiness.py  reconcile.py  repo.py  services.py  strangler.py  strava.py  strava_import.py  zones.py
backend/contract_tests/: conftest.py  run_local.sh  run_parity.sh  test_contract_v1.py  test_parity_exports.py
backend/scripts/: seed_demo.py  verify_math.py
backend/tests/: conftest.py  test_auth.py  test_chart_windows.py  test_checkin_feel.py  test_dashboards.py  test_dedup.py  test_device_auth.py  test_export.py  test_export_proxy.py  test_fitness_tests.py  test_hardening.py  test_health.py  test_health_ingest.py  test_history.py  test_insights.py  test_jobs.py  test_metrics.py  test_migrations.py  test_nutrition.py  test_pipeline.py  test_planning.py  test_races.py  test_readiness.py  test_reconcile.py  test_strangler.py  test_strava_compliance.py  test_strava_import.py  test_zones.py
(+468 files in other folders)
