[project]
name = "iron-trainer-backend"
version = "0.1.0"
description = "AI-adaptive IRONMAN 70.3 training plan + tracking API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "numpy>=2.1",
    "fit-tool>=0.9.13",
    "fitdecode>=0.10",
    "python-multipart>=0.0.12",
    "sqlmodel>=0.0.21",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "itsdangerous>=2.2",
]

[project.scripts]
iron-dedup = "app.cli:dedup"
iron-serve = "app.cli:serve"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "testcontainers[postgres]>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
